---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "linter": {
    "rules": {
      "suspicious": {
        "noDebugger": "off"
      }
    }
  }
}
```

## `check.js`

```js

    export function CONSTANT_CASE(){
        debugger;
    }
    
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes needed.
```
